--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     meta(name='author', content= "Andrei Constantinescu")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(href="https://fonts.googleapis.com/css?family=Nunito:400,700", rel="stylesheet")
+    link(href="//vjs.zencdn.net/5.8/video-js.min.css" rel="stylesheet")
     title Evolution Coaching
     != css()
 
@@ -17,7 +18,7 @@ html
     #content
       block content
     #footer
-    
+    script(src="//vjs.zencdn.net/5.8/video.min.js")
     script(src='https://code.jquery.com/jquery-2.2.4.min.js')
     script(src='js/templates.js')
 
