--- a/views/index.jade
+++ b/views/index.jade
@@ -11,8 +11,7 @@ block content
       h1 - Avec une touche personnelle
   
   .home-video
-    video(id="really-cool-video" class="video-js vjs-default-skin" controls preload="auto" data-setup='{}')
-      source(src="videos/video.mp4" type="video/mp4")
+    video(src="videos/video.mp4" type="video/mp4" id="really-cool-video" class="video-js vjs-default-skin" controls preload="auto" data-setup='{}')
       
   .center(style='color: #8baf1a; margin-top: 60px') 
     .en
