--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
       h1 - Avec une touche personnelle
   
   .home-video
-    video(controls preload="auto" style="margin: 0 auto")
+    video(controls preload="auto" style="margin: 0 auto" autobuffer)
       source(src="videos/video.mp4" type="video/mp4")
       source(src="videos/video.webm" type="video/webm")
       
