--- a/views/index.jade
+++ b/views/index.jade
@@ -12,8 +12,7 @@ block content
   
   .home-video
     video(controls style="margin: 0 auto")
-      source(src="videos/video.mp4" type="video/mp4")
-      source(src="videos/video.webm" type="video/webm")
+      source(src="//github.com/andreiconstantinescu/evolution-coaching/blob/master/assets/videos/video.mp4?raw=true" type="video/mp4")
       
   .center(style='color: #8baf1a; margin-top: 60px') 
     .en
