--- a/assets/css/pages.styl
+++ b/assets/css/pages.styl
@@ -33,6 +33,8 @@
   @media screen and (max-width: 852px)
       .description
         width 100%
+      .who-image
+        width 100%
 
 .what-page, .how-page
 
