--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -18,7 +18,6 @@ body
 #content
   max-width 1000px
   margin 0 auto
-  padding-top 122px
 
 .who, .who a
   color #8baf1a !important
@@ -95,3 +94,10 @@ body
 
 .contact-page-footer
   background-color #c078af
+
+.home-page-banner
+  margin-top 122px
+  color white
+  height 210px
+  text-align center
+  padding 25px 0
