--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,8 +12,16 @@ html
     != css()
 
   body
-    
+
     #navbar
+    .home-page-banner.home-page-footer(style='margin-bottom: 30px')
+      .en
+        h2 "Evolution has provided me with essential business mangement <br> skills through a truly personal coaching approach" <br>
+        h3 - a client
+      .fr
+        h2 "Evolution m'a fourni une gestion d'entreprise essentielle Compétences <br> grâce à une approche de coaching vraiment personnelle"
+        h3 - un client
+
     #content
       block content
     #footer
