--- a/css/master.css
+++ b/css/master.css
@@ -572,9 +572,13 @@ body {
 .home-page-banner {
   margin-top: 122px;
   color: #fff;
-  height: 210px;
+  height: 200px;
   text-align: center;
-  padding: 25px 0;
+  padding: 45px 0;
+}
+.home-page-banner img {
+  width: 200px;
+  margin-bottom: 10px;
 }
 
  /*# sourceMappingURL=master.css.map */
