--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -98,6 +98,10 @@ body
 .home-page-banner
   margin-top 122px
   color white
-  height 210px
+  height 200px
   text-align center
-  padding 25px 0
+  padding 45px 0
+
+  img
+    width 200px
+    margin-bottom 10px
