--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,12 +15,11 @@ html
 
     #navbar
     .home-page-banner.home-page-footer(style='margin-bottom: 30px')
+      img(src='img/arrow-EC.svg')
       .en
-        h2 "Evolution has provided me with essential business mangement <br> skills through a truly personal coaching approach" <br>
-        h3 - a client
+        h2 "Evolution Coaching brought me to the essence of my challenges <br> thanks to their dynamic & energetic style"
       .fr
-        h2 "Evolution m'a fourni une gestion d'entreprise essentielle Compétences <br> grâce à une approche de coaching vraiment personnelle"
-        h3 - un client
+        h2 "Evolution Coaching m’a guidé vers l’essence de mes enjeux <br> et ce avec dynamisme et énergie"
 
     #content
       block content
